--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,5 +1,72 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+/* shared styles */
 .font-open-sans {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
+}
+
+.logo h2 {
+    font-size: 45px;
+    font-weight: 1000;
+}
+
+.color-orange {
+    color: #FD6E0A;
+}
+
+.btn
+{
+    padding: 8px 15px;
+    background-color: #FD6E0A;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+
+
+
+/* main styles */
+
+header {
+    background-color: #FFF8F3;
+    padding-top: 50px;
+}
+
+nav {
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .menu {
+    list-style: none;
+    display: flex;
+    gap: 50px;
+    align-items: center;
+}
+
+nav .menu li a {
+    text-decoration: none;
+    color: #474747;
+    font-size: 20px;
+    font-weight: 600;
+    transition: color 0.3s ease;
+}
+
+
+nav .menu li a:hover {
+    color: #FD6E0A;
 }
