--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  padding:0;
   box-sizing: border-box;
 }
 
@@ -32,7 +32,23 @@
     transition: background-color 0.3s ease;
 }
 
+.section-heading {
+    max-width: 827px;
+    text-align: center;
+}
 
+.section-heading h2 {
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.section-heading p {
+    font-size: 18px;
+    margin-bottom: 30px;
+    color: #757575;
+    line-height: 30px;
+}
 
 
 /* main styles */
@@ -46,8 +62,8 @@ header {
 }
 
 nav {
-    width: 71%;
-    max-width: 1140px;
+    width: 70%;
+    max-width: 1200px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -75,7 +91,7 @@ nav .menu li a:hover {
 }
 
 #banner {
-    margin: 46px 38px 0px 230px;
+    margin: 150px 38px 0px 230px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -84,7 +100,7 @@ nav .menu li a:hover {
 
 #banner .banner-content {
     max-width: 600px;
-    height: 500px;
+    height: 510px;
 }
 
 #banner .banner-content h2 {
@@ -109,4 +125,34 @@ nav .menu li a:hover {
     margin-bottom: 30px;
     line-height: 30px;
     
+}
+
+#about {
+    padding-top: 130px;
+
+}
+
+#about .about-container {
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 125px 150px;
+}
+
+#about .about-container .about-info {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info .info-item p {
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+}
+
+.about-info .info-item h4 {
+    font-size: 18px;
+    color: #181818;
 }
