--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
     color: white;
     border: none;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -57,7 +57,7 @@ header {
     background-color: #FFF8F3;
     padding-top: 50px;
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
-    background-position: top left, bottom right;
+    background-position: 24px 38px, bottom right;
     background-repeat: no-repeat;
 }
 
@@ -244,4 +244,55 @@ nav .menu li a:hover {
     color: #757575;
     margin-bottom: 5px;
 
+}
+
+.text-center {
+    text-align: center;
+}
+
+
+footer {
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    padding: 130px 0;
+
+}
+
+footer .footer-container {
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    gap: 115px;
+}
+
+.footer-container .social {
+    max-width: 562px;
+}
+
+.footer-container h2 {
+    color: #181818;
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+
+.footer-container p {
+    color: #474747;
+    line-height: 28px;
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+.footer-container .icons a {
+    margin-right: 24px;
+}
+
+.footer-container form input[type="text"],
+.footer-container form textarea {
+    width: 460px;
+    padding: 18px 30px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
+    color: #757575;
 }
