--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@
 header {
     background-color: #FFF8F3;
     padding-top: 50px;
-    background-image: url('../images/developer.png'), url('../images/header_bg.png');
+    background-image: url('./images/developer.png'), url('./images/header_bg.png');
     background-position: 24px 38px, bottom right;
     background-repeat: no-repeat;
 }
